updated organization of js and html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
-        <script type="text/javascript" src="index.js"></script>
+        <div id="list-of-laws">
+            <ul id= "ul-of-laws">
+
+            </ul>
+        </div id="new-account">
+              </div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
