updated htmls and js to break up laws and recipes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
 </head>
 
 <body>
+    <h1> Laws of Cooking</h1>
+    <h2> Little paragraph about Justin Warner and his book, also about how to use this site.</h2>
         <div id="list-of-laws">
             <ul id= "ul-of-laws">
-
             </ul>
-        </div id="new-account">
               </div>
+              <br><br>
+              <br><br>
+              <br><br>
+        <div id="list-of-recipes">
+            <ul id= "ul-of-recipes">
+            </ul>
+        </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
