associated recipes with each law in controller

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Cooking Laws</title>
-  <meta name="Cooking Laws" content="The Laws of Cooking">
+  <meta name="Cooking Laws" content="The Laws of Cooking. This is 100% based on the book by Justin Warner. Content, including recipes, names, descriptions and laws are not my own.">
   <meta name="Mackenzie Pech" content="https://github.com/mackied0g/cooking-laws-api">
  
 </head>
@@ -18,13 +18,8 @@
             <ul id= "ul-of-laws">
             </ul>
               </div>
-              <br><br>
-              <br><br>
-              <br><br>
-        <div id="list-of-recipes">
-            <ul id= "ul-of-recipes">
-            </ul>
-        </div>
+              <br>
+
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
