ahh so ugly and many errors but I'm trying my best

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <h1> Laws of Cooking</h1>
     <h2> Little paragraph about Justin Warner and his book, also about how to use this site.</h2>
-        <div id="list-of-laws">
-            <ul id= "ul-of-laws">
+        <div class="list-of-laws">
+            <ul class= "ul-of-laws">
             </ul>
               </div>
               <br>
 
     <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </body>
 </html>
