--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
     <h1> Laws of Cooking</h1>
     <h2> Little paragraph about Justin Warner and his book, also about how to use this site.</h2>
-        <div class="list-of-laws">
-            <ul class= "ul-of-laws">
-            </ul>
-              </div>
-              <br>
+    <div class="div-of-users"> 
+        <ul class="ul-of-users"></ul>
+    </div>
+        <br>
+
+    <div class="list-of-laws">
+        </div>
+        <br>
+    <div class="favorite-div">
+    </div>
 
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
