--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
     <h2> Little paragraph about Justin Warner and his book, also about how to use this site.</h2>
     <div class="div-of-users"> 
         <ul class="ul-of-users"></ul>
+        <!-- hide ul once user is selected -->
+        <!-- show 'back' page bringing you to list of users again and 0 faves -->
     </div>
         <br>
 
     <div class="list-of-laws">
         </div>
         <br>
-    <div class="favorite-div">
+        <div id=create-comment>
+                <form id = "newcomment" class = "add-new-comment-form">
+                    </form>
+        </div>
     </div>
 
     <script type="text/javascript" src="index.js"></script>
