woah made a weird pivot

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 </head>
 <body>
     <h1> Laws of Cooking</h1>
-    <h2> Little paragraph about Justin Warner and his book, also about how to use this site.</h2>
+    <h2> This shitty app was inspired by a very un-shitty book. One of my favorite books. <i>The Laws of Cooking</i>, by Chef Justin Warner. Yes, this is a cookbook, but an important one. Warner breaks down flavors into eleven monumental laws, and breaks those laws down into creative and unique recipes. <br>
+        Click on a law to see some recipes. Fill out the form below to create a new law.</h2>
         <br>
 
     <div class="list-of-laws">
         </div>
-        
-    </div>
+        <br>
+        <br>
+        <form id="form">
+                New Law:<br>
+                <input type="text" id= "newlaw" placeholder="Make a new law..." name="newlaw"><br>
+                Description:<br>
+                <input type="text" id="newdescription" placeholder="What meets what?" name="description">
+                <br>
+                <br>
+                <input type="submit" id="submit" name="submit">
+              </form>
 
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css">
